[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "CCARemote"
version = "1.0.0"
description = "MicroPython remote control library (BLE, WiFi, MQTT)"
authors = [{name = "A. Eckhart"}]
license = {text = "MIT"}
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["."]
